[workspace]
members = [
    "packages/angel_core",
    "packages/halo_token",
    "packages/ica_vaults",
    "contracts/ica/ica-controller",
    "contracts/ica/ica-host",
    "contracts/core/accounts",
    "contracts/core/cw3-endowment",
    "contracts/core/index-fund",
    "contracts/core/registrar",
    "contracts/core/swap-router",
    "contracts/multisig/cw4-group",
    "contracts/multisig/cw3-apteam",
    "contracts/multisig/cw3-applications",
    "contracts/multisig/cw3-generic",
    "contracts/vaults/loop",
    "contracts/vaults/astroport",
]

exclude = [
    "contracts/halo/airdrop",
    "contracts/halo/collector",
    "contracts/halo/community",
    "contracts/halo/distributor",
    "contracts/halo/gov",
    "contracts/halo/gov-hodler",
    "contracts/halo/staking",
    "contracts/halo/vesting",
    "contracts/vaults/junoswap",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
