[workspace]
members = [
    "packages/angel_core",
    "packages/halo_token",
    "packages/ica_vaults",
    "contracts/ica/ica-controller",
    "contracts/ica/ica-host",
    "contracts/core/accounts",
    "contracts/core/index-fund",
    "contracts/core/registrar",
    "contracts/core/fundraising",
    "contracts/core/swap-router",
    "contracts/normalized-endowment/cw3-endowment",
    "contracts/normalized-endowment/cw900-lv",
    "contracts/normalized-endowment/subdao",
    "contracts/normalized-endowment/subdao-bonding-token",
    "contracts/normalized-endowment/donation-match",
    "contracts/normalized-endowment/fee-distributor",
    "contracts/multisig/cw4-group",
    "contracts/multisig/cw3-apteam",
    "contracts/multisig/cw3-applications",
    "contracts/multisig/cw3-generic",
    "contracts/vaults/loop",
    "contracts/vaults/astroport",
    "contracts/accessory/gift-cards",
]

exclude = [
    "contracts/halo/airdrop",
    "contracts/halo/collector",
    "contracts/halo/community",
    "contracts/halo/distributor",
    "contracts/halo/gov",
    "contracts/halo/gov-hodler",
    "contracts/halo/staking",
    "contracts/halo/vesting",
    "contracts/vaults/junoswap",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
