[workspace]
members = [
    "packages/angel_core",
    "contracts/core/accounts",
    "contracts/core/index-fund",
    "contracts/core/registrar",
    "contracts/core/settings-controller",
    "contracts/core/swap-router",
    "contracts/normalized-endowment/cw3-endowment",
    "contracts/normalized-endowment/cw900-lv",
    "contracts/normalized-endowment/subdao",
    "contracts/normalized-endowment/subdao-bonding-token",
    "contracts/normalized-endowment/donation-match",
    "contracts/normalized-endowment/fee-distributor",
    "contracts/multisig/cw4-group",
    "contracts/multisig/cw3-apteam",
    "contracts/multisig/cw3-applications",
    "contracts/multisig/cw3-generic",
    "contracts/accessory/fundraising",
    "contracts/accessory/gift-cards",
]

exclude = [
    "packages/ica_vaults",
    "packages/halo_token",
    "contracts/ica/ica-controller",
    "contracts/ica/ica-host",
    "contracts/vaults/loop",
    "contracts/vaults/astroport",
    "contracts/halo/airdrop",
    "contracts/halo/collector",
    "contracts/halo/community",
    "contracts/halo/distributor",
    "contracts/halo/gov",
    "contracts/halo/gov-hodler",
    "contracts/halo/staking",
    "contracts/halo/vesting",
    "contracts/ica/ica-controller",
    "contracts/ica/ica-host",
    "contracts/vaults/junoswap",
    "contracts/vaults/loop",
    "contracts/vaults/astroport",
]

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
