[workspace]
members = [
    "packages/angel_core",
    "core/accounts",
    "core/index-fund",
    "core/registrar",
    "core/accounts-settings-controller",
    "core/swap-router",
    "normalized-endowment/cw3-endowment",
    "normalized-endowment/cw900-lv",
    "normalized-endowment/subdao",
    "normalized-endowment/subdao-bonding-token",
    "normalized-endowment/donation-match",
    "normalized-endowment/fee-distributor",
    "multisig/cw4-group",
    "multisig/cw3-apteam",
    "multisig/cw3-applications",
    "multisig/cw3-generic",
    "accessory/fundraising",
    "accessory/gift-cards",
]

exclude = [
    "packages/ica_vaults",
    "packages/halo_token",
    "ica/ica-controller",
    "ica/ica-host",
    "vaults/loop",
    "vaults/astroport",
    "halo/airdrop",
    "halo/collector",
    "halo/community",
    "halo/distributor",
    "halo/gov",
    "halo/gov-hodler",
    "halo/staking",
    "halo/vesting",
    "ica/ica-controller",
    "ica/ica-host",
    "vaults/junoswap",
    "vaults/loop",
    "vaults/astroport",
]

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
