[package]
name = "mock-vault"
version = "1.0.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-controllers = "0.13.4"
cw-storage-plus = { version = "0.13.4", features = ["iterator"] }
cw2 = "0.13.4"
cw20 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"] }
serde_json = "1.0.68"
thiserror = "1.0.24"
schemars = "0.8.10"
serde = "1.0.137"
cw-asset = "2.2.0"
