[package]
name = "gift-cards"
version = "0.2.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
angel-core = { path = "../../../packages/angel_core" }
cosmwasm-std = "1.1.3"
cosmwasm-schema = "1.1.3"
cw-storage-plus = "0.13.4"
cw2 = "0.13.4"
cw20 = "0.13.4"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-asset = "2.2.0"

[dev-dependencies]
cw-multi-test = "0.13.4"
