[package]
name = "cw3-endowment"
version = "2.0.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
angel-core = { path = "../../../packages/angel_core" }
cw2 = "0.13.4"
cw3 = "0.13.4"
cw4 = "0.13.4"
cw-utils = "0.13.4"
cw-storage-plus = "0.13.4"
cosmwasm-std = "1.0.0"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = "1.0.24"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw4-group = "0.13.4"
cw-multi-test = "0.13.4"
