[package]
name = "registrar"
version = "0.1.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
angel-core = { version = "0.1.0", path = "../../../packages/angel_core" }
accounts = { path = "../../../contracts/core/accounts" }
cosmwasm-bignumber = "2.2.0"
cosmwasm-std = { version = "0.16.0", features = ["staking"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
cw-controllers = "0.8.0"
cw-storage-plus = { version = "0.8.0", features = ["iterator"] }
cw2 = "0.8.0"
cw20 = "0.8.0"
cw20-base = { version = "0.8.0", features = ["library"] }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-vm = { version = "0.16.0", default-features = false, features = ["iterator"] }