[package]
name = "registrar"
version = "1.9.2"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
angel-core = { path = "../../../packages/angel_core" }
accounts = { path = "../../../contracts/core/accounts" }
cosmwasm-std = { version = "1.0.0", features = ["staking", "abort"] }
cw-storage-plus = { version = "0.13.4", features = ["iterator"] }
cw2 = "0.13.4"
cw20 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"] }
cw4 = "0.13.4"
cw-utils = "0.13.4"
cw4-group = "0.13.4"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = "1.0.24"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cosmwasm-vm = { version = "1.0.0", default-features = false, features = ["iterator"] }
