[package]
name = "settings-controller"
version = "2.0.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
angel-core = { path = "../../../packages/angel_core" }
cw-utils = "0.13.4"
cw2 = "0.13.4"
cw20 = "0.13.4"
cw4 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"] }
cw-storage-plus = "0.13.4"
schemars = "0.8.10"
serde = "1.0.137"
cosmwasm-std = { version = "1.0.0",  features = ["abort"] } 
thiserror = "1.0.24"
cosmwasm-schema = "1.0.0"
cw-asset = "2.2.0"

[dev-dependencies]
cosmwasm-storage = "1.0.0"
