[package]
name = "swap-router"
version = "1.9.1"
authors = ["Angel Ventures LLC"]
edition = "2018"
description = "A swap router contract for Angel Protocol Endowments - manages multi-step swap operations to abstract away swaping complexity"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
angel-core = { path = "../../packages/angel_core" }
cw2 = "0.13.4"
cw20 = "0.13.4"
cosmwasm-std = { version = "1.0.0", features = ["iterator", "abort"] }
cw-storage-plus = {version = "0.13.4", features = ['iterator']}
cw-asset = "2.2.0"
terraswap = "2.8.0"
integer-sqrt = "0.1.5"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
