[package]
name = "normalized-endowment"
version = "0.1.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
angel-core = { path = "../../../packages/angel_core" }
cw2 = "0.9.0"
cw20 = "0.9.0"
cw-controllers = "0.9.0"
cw20-base = { version = "0.9.0", features = ["library"] }
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.9.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
cosmwasm-bignumber = "2.2.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cw-multi-test = { version = "0.9.0" }
