[package]
name = "halo-airdrop"
version = "1.6.0"
authors = ["Angel Ventures LLC"]
edition = "2018"
description = "A Airdrop contract for Angel Protocol - allow users to claim rewards with Merkle Tree based proof"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
halo-token = { version = "2.0.0", path = "../../../packages/halo_token" }
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = { version = "0.9.0" }
cw20 = { version = "0.8.0" } 
hex = "0.4"
schemars = "0.8.1"
sha3 = { version = "0.9.1", default-features = false }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
