[package]
name = "halo-airdrop"
version = "1.6.0"
authors = ["Angel Ventures LLC"]
edition = "2018"
description = "A Airdrop contract for Angel Protocol - allow users to claim rewards with Merkle Tree based proof"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
halo-token = { path = "../../../packages/halo_token" }
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw20 = "0.13.2"
hex = "0.4"
schemars = "0.8.10"
sha3 = "0.9.1"
serde = "1.0.137"
thiserror = "1.0.24"
