[package]
name = "halo-collector"
version = "0.1.0"
authors = ["Angel Ventures LLC"]
edition = "2018"
description = "A Collector contract for Angel Protocol - collect all rewards and send it to staking contract"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8.0" } 
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
halo-token = { version = "0.1.0", path = "../../../packages/halo_token" }
terra-cosmwasm = "2.2.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
astroport-lbp = { git = "https://github.com/AngelProtocolFinance/astroport-lbport.git" }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
