[package]
name = "halo-community"
version = "1.6.0"
authors = ["Angel Ventures LLC"]
edition = "2018"
description = "A Community contract for Angel Protocol - Keeps premined HALO token which can be used through Gov proposal"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
angel-core = { path = "../../../packages/angel_core", feature=["utils"]}
cw20 = "0.13.2" 
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
halo-token = { path = "../../../packages/halo_token" }
schemars = "0.8.10"
serde = "1.0.137"
cosmwasm-schema = "1.0.0"
