[package]
name = "halo-community"
version = "2.0.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
angel-core = { path = "../../packages/angel_core" }
cw20 = "0.13.4"
cosmwasm-std = { version = "1.0.0",  features = ["abort"] } 
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.4"
halo-token = { path = "../../../packages/halo_token" }
schemars = "0.8.10"
serde = "1.0.137"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
