[package]
name = "halo-gov-hodler"
version = "2.0.0"
authors = ["Angel Ventures LLC"]
edition = "2018"
description = "A Claims Hodler for the Angel Protocol Gov contract- holds on to all claimed HALO from Gov until it is ready to be released to their owners"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = "0.13.2" 
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
halo-token = { path = "../../../packages/halo_token" }
schemars = "0.8.10"
serde = "1.0.137"
