[package]
name = "halo-gov"
version = "0.0.0"
authors = ["Angel Ventures LLC"]
edition = "2018"
description = "A Goverance contract for Angel Protocol - allows a user to create poll and vote"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8.0" } 
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
halo-token = { version = "0.1.0", path = "../../../packages/halo_token" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
terraswap = { version = "2.4.0" }
thiserror = { version = "1.0.20" }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
