[package]
name = "halo-gov"
version = "1.6.0"
authors = ["Angel Ventures LLC"]
edition = "2018"
description = "A Goverance contract for Angel Protocol - allows a user to create poll and vote"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw0 = "0.10.3"
cw20 = "0.13.4"
cw-controllers = "0.13.4"
cosmwasm-std = { version = "1.0.0", features = ["iterator"] }
cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
cw-storage-plus = { version = "0.13.4" }
halo-token = { version = "0.1.0", path = "../../../packages/halo_token" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
terraswap = { version = "2.4.0" }
thiserror = { version = "1.0.20" }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
