[package]
name = "halo-gov"
version = "2.0.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
angel-core = { path = "../../../packages/angel_core" }
halo-token = { path = "../../../packages/halo_token" }

cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-controllers = "0.13.4"
cw-storage-plus = "0.13.4"
cw-utils = "0.13.4"
cw20 = "0.13.4"
schemars = "0.8.10"
serde = "1.0.137"
terraswap = "2.6.0"
thiserror = "1.0.24"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
