[package]
name = "halo-vesting"
version = "1.6.0"
authors = ["Angel Ventures LLC"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
halo-token = { path = "../../../packages/halo_token" }

cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.4"
schemars = "0.8.10"
serde = "1.0.137"
cosmwasm-schema = "1.0.0"
cw20 = "0.13.4"
